# dictateme

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  config.default.toml  pyproject.toml  vercel.json
.github/workflows/: release.yml
app/: package-lock.json  package.json
app/src/: _build_index.b64  _gen.py  _writer.py  dashboard.html  index.html  settings.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: _gen_icons.py  icon.icns
app/src-tauri/src/: main.rs
scripts/: build.py  download_models.py
src/dictateme/: __init__.py  __main__.py  app.py  server.py
src/dictateme/audio/: __init__.py  buffer.py  capture.py  devices.py  vad.py
src/dictateme/core/: __init__.py  config.py  event_bus.py  events.py  orchestrator.py  types.py
src/dictateme/hotkey/: __init__.py  bindings.py  manager.py
src/dictateme/insertion/: __init__.py  clipboard.py  context.py  inserter.py  sendinput.py
src/dictateme/llm/: __init__.py  processor.py  prompts.py  providers.py
src/dictateme/stt/: __init__.py  engine.py  faster_whisper.py  model_manager.py
src/dictateme/ui/: __init__.py  icons.py  overlay.py  overlay_html.py  tray.py
src/dictateme/utils/: __init__.py  log.py  platform.py  threading.py
tests/: conftest.py  test_audio_buffer.py  test_config.py  test_event_bus.py  test_hotkey_bindings.py  test_insertion_clipboard.py  test_insertion_context.py  test_llm_prompts.py  test_platform_utils.py  test_server.py  test_types.py
website/: index.html  server.py
